added first draft

--- a/Casus_uitwerking.ipynb
+++ b/Casus_uitwerking.ipynb
@@ -9,7 +9,30 @@
     }
    },
    "source": [
-    "# sdfdsf\n"
+    "# Analyse over Wijn\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## onderzoeksvragen\n",
+    "- In hoeverre is de score van een Portugese Red te voorspellen op basis van de chemische kenmerken?  \n",
+    "- Zijn de wijnen die met een hoge score beoordeeld zijn duurder dan wijnen met een lagere score?\n",
+    "- In hoeverre kan op basis van de chemische kenmerken voorspelt worden of het een witte of rode wijn is?\n",
+    "- Welke kernwoorden zijn typerend voor een hoog scorende wijn?  \n",
+    "\n",
+    "Wij zullen deze onderzoeksvragen zo goed mogelijk proberen te beantwoorden.\n",
+    "Voor de beantwoording van deze vragen maken wij gebruik van het Data Science proces.  \n",
+    "Dit proces ziet er als volgt uit:\n",
+    "### Het data science proces\n",
+    "1. Data collection\n",
+    "2. Data processing\n",
+    "3. Data cleaning\n",
+    "4. Data exploration & analysis\n",
+    "5. Model building\n",
+    "6. Visualization\n",
+    "7. Communication\n"
    ]
   },
   {
@@ -22,7 +45,7 @@
    },
    "source": [
     "Allereerst zullen we de benodigde libraries importeren.\n",
-    "Deze libraries zullen we gebruiken voor de analyse en het visualiseren van de data."
+    "Deze libraries zullen we gebruiken voor het analyseren en het visualiseren van de data."
    ]
   },
   {
@@ -48,14 +71,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "metadata": false,
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
-    "\n"
+    "## Data Collection\n",
+    "De eerste dataset die we gaan gebruiken is aan ons aangeleverd. De dataset is een csv bestand en heet: 'redwine.csv'. In de dataset staat informatie en chemische kenmerken van wijnen in Portugal. \n",
+    "\n",
+    "Allereerst beginnen we met het importeren van de dataset en kijken we of de dataset correct is geïmporteerd door de eerste 5 regels op te vragen."
    ]
   },
   {
@@ -66,13 +87,46 @@
      "is_executing": false,
      "metadata": false,
      "name": "#%%\n"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# import the data files\n",
-    "df_red_wine = pd.read_csv(\"data/red_wine.csv\", sep=\";\")\n",
-    "df_red_wine.head()\n"
+    "df_red_wine = pd.read_csv(\"data/redwine.csv\", sep=\";\")\n",
+    "df_red_wine.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### externe dataset\n",
+    "Aangezien onze eerste dataset alleen maar kenmerken van rode wijn bevat zijn wij gaan zoeken naar een dataset met kenmerken van witte wijn.  \n",
+    "  \n",
+    "De dataset komt van de volgende website: https://archive.ics.uci.edu/ml/datasets/wine+quality  \n",
+    "  \n",
+    "Ook deze dataset gaan we importeren om hierna te controleren of hij goed geïmporteerd is."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_white_wine = pd.read_csv(\"data/winequality-white.csv\", sep=\";\")\n",
+    "df_white_wine.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Processing\n",
+    "Aangezien de bestanden met de data al in een csv bestand staan kunnen deze direct in een dataframe worden ingelezen.  \n",
+    "Nu is het nog aan ons om te beslissen of er nog kolomnamen zijn die aangepast moeten worden en welke kolommen we gaan droppen.  \n",
+    "In totaal heeft deze dataset 22 kolommen. Om uit te zoeken welke kolommen essentieel zijn voor het verdere proces gaan we nu eerste kijken hoe de kolommen heten."
    ]
   },
   {
@@ -83,11 +137,12 @@
      "is_executing": false,
      "metadata": false,
      "name": "#%%\n"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "df_red_wine.dtypes\n"
+    "df_red_wine.columns"
    ]
   },
   {
@@ -99,46 +154,273 @@
     }
    },
    "source": [
-    "- ID  \n",
-    "    asdf\n",
-    "- Country  \n",
-    "    asdf\n",
-    "- Description  \n",
-    "    asdf\n",
-    "- Designation  \n",
-    "- Points  \n",
-    "- Price  \n",
-    "- Province  \n",
-    "- Taster_name  \n",
-    "- Title  \n",
-    "- Variety  \n",
-    "- Winery  \n",
-    "- Fixed acidity  \n",
-    "- Volatile acidity  \n",
-    "- Citric acid  \n",
-    "- Residual sugar  \n",
-    "- Chlorides  \n",
-    "- Free sulfur dioxide  \n",
-    "- Total sulfur dioxide  \n",
-    "- Density  \n",
-    "- pH  \n",
-    "- Sulphates  \n",
-    "- Alcohol  "
+    "Om goed te kunnen begrijpen met welke data we hier mee te maken hebben is hieronder voor iedere kolom de betekenis van de data die erin staat gegeven.  \n",
+    "\n",
+    "- **id**  \n",
+    "    Een uniek nummer voor iedere rij\n",
+    "- **Country**  \n",
+    "    Het land waar de wijn vandaan komt\n",
+    "- **Description**  \n",
+    "    De beschrijving van de wijn\n",
+    "- **Designation**  \n",
+    "    De wijngaard waar tenminste 85% van de druiven vandaan komen\n",
+    "- **Points**  \n",
+    "    De hoeveelheid punten die de wijn heeft gekregen van de proever\n",
+    "- **Price**  \n",
+    "    De prijs van de wijn\n",
+    "- **Province**  \n",
+    "    De provincie waar de wijn\n",
+    "- **Taster_name**  \n",
+    "    De volledige naam van de proever\n",
+    "- **Title**  \n",
+    "    De titel die normaliter op het wijnetiket staat\n",
+    "- **Variety**  \n",
+    "    Het type druif dat gebruikt wordt\n",
+    "- **Winery**  \n",
+    "    Het bedrijf waar de wijn geproduceerd is\n",
+    "- **Fixed acidity**  \n",
+    "    \n",
+    "- **Volatile acidity**  \n",
+    "    \n",
+    "- **Citric acid**  \n",
+    "    \n",
+    "- **Residual sugar**  \n",
+    "    \n",
+    "- **Chlorides**  \n",
+    "    De hoeveelheid zout in de wijn\n",
+    "- **Free sulfur dioxide**  \n",
+    "    \n",
+    "- **Total sulfur dioxide**  \n",
+    "    \n",
+    "- **Density**  \n",
+    "    \n",
+    "- **pH**  \n",
+    "    Is een maat voor de zuurgraad van een waterige oplossing. De schaal gaat van 0 (zuur) tot 14 (basisch). De meeste wijnen zitten tussen de 2.8 en de 4.0\n",
+    "- **Sulphates (sulfites)**  \n",
+    "    \n",
+    "- **Alcohol**  \n",
+    "    Het percentage alcohol in de wijn\n",
+    "\n",
+    "Voor het uitzoeken van de betekenis van deze termen/kolommen zijn de volgende bronnen gebruikt:  \n",
+    "- https://www.gall.nl/ontdek/wijn/de-zuurgraad-van-wijn/\n",
+    "- https://winecompliancealliance.com/vinyard-designation-on-a-wine-label/\n",
+    "- http://rstudio-pubs-static.s3.amazonaws.com/80458_5000e31f84df449099a872ccf40747b7.html\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bij deze dataset hebben we al de voorkennis dat al deze wijnen uit Portugal komen. Hierdoor hoeven we de kolom 'country' niet te gebruiken. Verder geeft 'variety' aan met wat voor druif we te maken hebben, waarschijnlijk zal dit ook maar één unieke waarde hebben.  \n",
+    "Voordat we deze kolommen weggooien checken we nog voor de zekerheid of onze aannames kloppen. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_red_wine['country'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_red_wine['variety'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Onze aannames blijken te kloppen. We hebben hier twee keer te maken met een kolom met maar één unieke waarde. Deze kolommen kunnen dus gedropt worden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_red_wine.drop(['country', 'variety'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Op basis van onze onderzoeksvragen kunnen we ook de kolommen 'Designation', 'winery' en 'Province' laten vallen. Dit omdat we voor de beantwoording van onze onderzoeksvragen geen onderscheid hoeven te maken tussen de verschillende provincies of de wijngaarden waar de wijn vandaan kan komen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_red_wine.drop(['designation', 'province', 'winery'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verder maken we van de kolom 'id' de index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_red_wine.set_index('id', inplace=True)\n",
+    "df_red_wine.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data cleaning\n",
+    "Nu de data bewerkt is kunnen we tot de volgende stap overgaan: het opschonen van de data. Hierbij gaan we op zoek naar missende en dubbele waarden, outliers en onvolkomenheden.  \n",
+    "Allereerst gaan we opzoek naar rijen waar waarden missen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df_red_wine)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "metadata": false,
-     "name": "#%%\n"
-    }
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "pd.isnull(df_red_wine).sum()\n"
+    "pd.isnull(df_red_wine).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hier zien we dat er 269 missende waarden zijn en dat die waarden zich allemaal in de 'price' kolom bevinden. Deze waarde hebben we echter wel voor één van de onderzoeksvragen. Hier hebben wij de afweging gemaakt om deze waarden te verwijderen.  \n",
+    "Deze keuze is gebaseerd op het feit dat we nu ongeveer 12% van de data weggooien en we dus nog genoeg data behouden om te onderzoeken of er een relatie zit tussen de prijs en de hoeveelheid punten van een fles wijn.  \n",
+    "We droppen dus alle rijen met missende waardes en tegelijkertijd verwijderen we duplicate rijen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# deleting the rows with empty values\n",
+    "df_red_wine.dropna(inplace=True)\n",
+    "# deleting the duplicates rows\n",
+    "df_red_wine.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "chemische kenmerken filteren!!!!!!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Exploration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_red_wine.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wat uitleg over bovenstaande tabel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### De wijnproevers\n",
+    "Aangezien we met wijnproevers te maken hebben is alle data over de punten die aan een wijn toegedeeld zijn subjectief. Allereerst willen we wat inzicht krijgen over het gedrag van deze groep bij de toekenning van de punten.  \n",
+    "  \n",
+    "Eerst gaan we kijken met hoeveel wijnproevers we in totaal te maken hebben."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df_red_wine['taster_name'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We hebben dus met 18 verschillende wijnproevers te maken.  \n",
+    "Hierna gaan we kijken of de frequenties van de beoordelingen van de wijnproevers gelijk verdeeld zijn."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_red_wine['taster_name'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uit de bovenstaande tabel valt te zien dat de frequenties van de beoordelingen niet evenredig verdeeld zijn. Zo valt te zien dat sommige proevers zeer veel beoordelingen hebben gegeven terwijl andere veel minder hebben gegeven."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_taster_index = df_red_wine.copy()\n",
+    "df_taster_index.set_index('taster_name', inplace=True)\n",
+    "df_taster_index.head()"
    ]
   }
  ],
