added a table with stats about the tasters

--- a/Casus_uitwerking.ipynb
+++ b/Casus_uitwerking.ipynb
@@ -409,7 +409,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Uit de bovenstaande tabel valt te zien dat de frequenties van de beoordelingen niet evenredig verdeeld zijn. Zo valt te zien dat sommige proevers zeer veel beoordelingen hebben gegeven terwijl andere veel minder hebben gegeven."
+    "Uit de bovenstaande tabel valt te zien dat de frequenties van de beoordelingen niet evenredig verdeeld zijn. Zo valt te zien dat sommige proevers zeer veel beoordelingen hebben gegeven terwijl andere veel minder hebben gegeven.  \n",
+    "  \n",
+    "Hierna willen we graag weten wat de minimale, maximale en gemiddelde score is per proever."
    ]
   },
   {
@@ -418,10 +420,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# prepare the data_frame\n",
     "df_taster_index = df_red_wine.copy()\n",
+    "df_taster_index = df_taster_index[['taster_name', 'points']]\n",
     "df_taster_index.set_index('taster_name', inplace=True)\n",
-    "df_taster_index.head()"
+    "\n",
+    "# getting the min, max and average per taster\n",
+    "taster_avg = df_taster_index.groupby('taster_name').mean()\n",
+    "taster_min = np.min(df_taster_index.groupby('taster_name'))\n",
+    "taster_max = np.max(df_taster_index.groupby('taster_name'))\n",
+    "\n",
+    "# building a new dataframe with all the info per taster\n",
+    "df_taster_stats = pd.concat([taster_min, taster_max, taster_avg], axis=1)\n",
+    "df_taster_stats.columns = ['min points', 'max points', 'avg points']\n",
+    "df_taster_stats"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
