added final draft onderzoeksvraag 1

--- a/Casus_uitwerking.ipynb
+++ b/Casus_uitwerking.ipynb
@@ -815,7 +815,10 @@
    "metadata": {},
    "source": [
     "Zoals in de bovenstaande tabel te zien valt is er niet echt een groot verschil tussen de correlaties van één persoon en de correlaties van de gehele set van wijnproevers. desalniettemin hoeft dat niet te betekenen dat dit ook voor de rest van de wijnproevers het geval is. Wel valt er namelijk te zien dat de correlatie iets sterker is op sommige plekken.  \n",
-    "  \n"
+    "  \n",
+    "Om nog voor de zekerheid te checken of er geen sprake was van overfitting bij de eerste lineaire regressie hebben we ervoor gekozen om lineaire regressie nogmaals toe te passen. Echter zullen we deze keer de hoeveelheid features drastisch verlagen. Voor de keuze van de features hebben we gekozen om zowel naar de correlatie tabel als naar de coëfficienten tabel van het vorige regressiemodel te kijken. Hieruit hebben we de volgende features gekozen: 'citric acid', 'sulphates', 'alcohol', 'volatile acidity' en 'chlorides'.\n",
+    "  \n",
+    "Met behulp van deze features maken we nu opnieuw een lineair regressie model. Hierna zullen we dit model nogmaals testen om de effectiviteit te bepalen."
    ]
   },
   {
@@ -828,8 +831,7 @@
     "selected_features_regr_model = LinearRegression()\n",
     "\n",
     "# Select the features and target\n",
-    "#X = df_red_wine[['citric acid', 'sulphates', 'alcohol', 'volatile acidity', 'chlorides']]\n",
-    "X = df_red_wine[['alcohol', 'sulphates', 'chlorides']]\n",
+    "X = df_red_wine[['citric acid', 'sulphates', 'alcohol', 'volatile acidity', 'chlorides']]\n",
     "y = df_red_wine['points']\n",
     "\n",
     "# create a training and test set\n",
@@ -856,7 +858,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Wanneer we deze resultaten vergelijken met het eerdere regressie model zien we niet echt een verbetering. We kunnen dus stellen dat er geen sprake was van overfitting.  \n",
+    "  \n",
+    "Aangezien lineaire regressie niet echt een succes was zijn we naar andere algoritmen gaan het kijken die gebruik maken van supervised learning. KNN viel voor ons af, omdat dit model minder effectief is bij meerdere dimensies. Hierna kwamen we aan bij decision trees. Het voordeel van decision trees is dat er niet persé correlatie voor nodig is voor de werking van het model (al helpt het wel).  \n",
+    "  \n",
+    "Aangezien een decision tree gevoelig is voor overfitten hebben we ervoor gekozen om zowel een validatie als een test set te gebruiken. Hierdoor kunnen we het overfitten deels tegengaan.  \n",
+    "Om erachter te komen bij welke maximale diepte de decision tree het effectiefst is testen we het model voor meerdere dieptes. Hieruit hopen we de beste $n$ te kunnen achterhalen voor het model."
+   ]
   },
   {
    "cell_type": "code",
@@ -897,7 +906,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Uit de bovenstaande resultaten valt te lezen dat dit model het meest accuraat is bij $n = 6$. Het model voorspelt daar voor 35% van de waarde de accurate score.  \n",
+    "Aangezien we hier te maken hebben met een decision tree is het ook zeer interessant voor ons om te weten te komen welke feature de decision tree voornamelijk gebruikt om te discrimineren.  \n",
+    "Om het model te visualiseren maken we gebruik van een library van sklearn. Uiteindelijk komt hier een gevisualiseerde decision tree uit."
+   ]
   },
   {
    "cell_type": "code",
@@ -935,8 +948,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Alcohol is de grootste discriminator"
+    "Uit de foto die gegenereerd is op basis van het model valt te lezen dat de score voornamelijk wordt voorspelt op basis van de discriminatie op alcohol."
    ]
   },
   {
@@ -945,9 +957,10 @@
    "source": [
     "### Conclusie\n",
     "Geen significante correlatie tussen de hoeveelheid punten die een bepaalde wijn heeft gekregen en de chemische kenmerken van de desbetreffende wijn. Hierdoor is het voorspellen door middel van lineaire regressie niet effectief wat ook blijkt uit de testen die we met dit algoritme hebben gedaan.  \n",
-    "De voorspellingen vanuit een decision tree waren iets effectiever\n",
-    "\n",
-    "- Alle scores die aan een bepaalde wijn zijn gegeven zijn subjectief van aard."
+    "De voorspellingen vanuit een decision tree waren iets effectiever, maar 35% is geen overduidelijk bewijs dat er een correcte voorspelling plaatsvind.  \n",
+    "Hiervoor hebben we de volgende redenen bedacht:  \n",
+    "- Alle scores die aan een bepaalde wijn zijn gegeven zijn subjectief van aard, hierdoor kan er geen overduidelijke correlatie gevonden worden.\n",
+    "- Of een wijn een hoge score zou krijgen zou kunnen liggen aan het feit dat misschien bepaalde kenmerken precies in een bepaalde hoeveelheid aanwezig moeten zijn. Minimale fluctuaties hierin zouden voor een grote verandering in de toegekende punten kunnen zorgen."
    ]
   },
   {
